--- a/src/templates/chart.hbs
+++ b/src/templates/chart.hbs
@@ -1,3 +1,3 @@
-<svg {{bind-attr width="outerWidth" height="outerHeight"}}>
-  <g class="chart-viewport" {{ bind-attr transform="transformViewport" }}></g>
+<svg style="width:{{outerWidth}};height:{{outerHeight}};">
+  <g class="chart-viewport" transform="{{transformViewport}}"></g>
 </svg>
