--- a/tests/dummy/app/templates/ember_charts/horizontal_bar.hbs
+++ b/tests/dummy/app/templates/ember_charts/horizontal_bar.hbs
@@ -5,13 +5,20 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{horizontal-bar-chart
+      {{!horizontal-bar-chart
         minBarThickness=minBarThickness
         maxBarThickness=maxBarThickness
         selectedSeedColor=selectedSeedColor
         data=data
         selectedSortType=selectedSortType
       }}
+      {{chart-horizontalbar
+        minBarThickness=minBarThickness
+        maxBarThickness=maxBarThickness
+        selectedSeedColor=selectedSeedColor
+        data=data
+        selectedSortType=selectedSortType
+      }}      
     </div>
   </div>
 
