work on timeseries chart conversion

--- a/tests/dummy/app/templates/_footer.hbs
+++ b/tests/dummy/app/templates/_footer.hbs
@@ -5,18 +5,18 @@
       <div class="col-md-3">
         <ul class="list-unstyled">
           <li><h6>Ember Charts</h6></li>
-          <li>{{#link-to 'emberCharts.overview'}}Overview &amp; Getting Started{{/link-to}}</li>
-          <li>{{#link-to 'emberCharts.documentation'}}API &amp; Documentation{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.overview'}}Overview &amp; Getting Started{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.documentation'}}API &amp; Documentation{{/link-to}}</li>
         </ul>
       </div>
       <div class="col-md-3">
         <ul class="list-unstyled">
           <li><h6>Chart Types</h6></li>
-          <li>{{#link-to 'emberCharts.horizontal_bar'}}Horizontal Bar Chart{{/link-to}}</li>
-          <li>{{#link-to 'emberCharts.vertical_bar'}}Vertical Bar Chart{{/link-to}}</li>
-          <li>{{#link-to 'emberCharts.pie'}}Pie Chart{{/link-to}}</li>
-          <li>{{#link-to 'emberCharts.scatter'}}Scatter Plot{{/link-to}}</li>
-          <li>{{#link-to 'emberCharts.time_series'}}Time Series{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.horizontalbar'}}Horizontal Bar Chart{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.verticalbar'}}Vertical Bar Chart{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.pie'}}Pie Chart{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.scatter'}}Scatter Plot{{/link-to}}</li>
+          <li>{{#link-to 'embercharts.timeseries'}}Time Series{{/link-to}}</li>
         </ul>
       </div>
       <div class="col-md-3">
