--- a/tests/dummy/app/templates/embercharts/_sub_navigation.hbs
+++ b/tests/dummy/app/templates/embercharts/_sub_navigation.hbs
@@ -13,15 +13,15 @@
   <hr>
   <ul class="list-unstyled project-navigation">
     <li class="sub-title">Ember charts</li>
-    <li>{{#link-to 'emberCharts.overview'}}Overview &amp; Getting Started{{/link-to}}</li>
-    <li>{{#link-to 'emberCharts.documentation'}}API &amp; Documentation{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.overview'}}Overview &amp; Getting Started{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.documentation'}}API &amp; Documentation{{/link-to}}</li>
   </ul>
   <hr>
   <ul class="list-unstyled project-navigation">
-    <li>{{#link-to 'emberCharts.horizontal_bar'}}Horizontal Bar Chart{{/link-to}}</li>
-    <li>{{#link-to 'emberCharts.vertical_bar'}}Vertical Bar Chart{{/link-to}}</li>
-    <li>{{#link-to 'emberCharts.pie'}}Pie Chart{{/link-to}}</li>
-    <li>{{#link-to 'emberCharts.scatter'}}Scatter Plot{{/link-to}}</li>
-    <li>{{#link-to 'emberCharts.time_series'}}Time Series Chart{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.horizontalbar'}}Horizontal Bar Chart{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.verticalbar'}}Vertical Bar Chart{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.pie'}}Pie Chart{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.scatter'}}Scatter Plot{{/link-to}}</li>
+    <li>{{#link-to 'embercharts.timeseries'}}Time Series Chart{{/link-to}}</li>
   </ul>
 </div>
