--- a/tests/dummy/app/templates/embercharts/overview.hbs
+++ b/tests/dummy/app/templates/embercharts/overview.hbs
@@ -11,19 +11,19 @@
   </div>
 
   <div class="row ember-charts-examples">
-    {{#link-to 'emberCharts.time_series'}}
+    {{#link-to 'emberCharts.timeseries'}}
       <div class="col-md-4">
         <h4>Time Series</h4>
         <img class="preview-box" src="img/preview_chart_time_series.png" />
       </div>
     {{/link-to}}
-    {{#link-to 'emberCharts.horizontal_bar'}}
+    {{#link-to 'emberCharts.horizontalbar'}}
       <div class="col-md-4">
         <h4>Horizontal Bar</h4>
         <img class="preview-box" src="img/preview_chart_horizontal_bar.png" />
       </div>
     {{/link-to}}
-    {{#link-to 'emberCharts.vertical_bar'}}
+    {{#link-to 'emberCharts.verticalbar'}}
       <div class="col-md-4">
         <h4>Vertical Bar</h4>
         <img class="preview-box" src="img/preview_chart_vertical_bar.png" />
