--- a/tests/dummy/app/templates/embercharts/timeseries.hbs
+++ b/tests/dummy/app/templates/embercharts/timeseries.hbs
@@ -5,7 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{time-series-chart
+      {{chart-timeseries
         barData=barData
         lineData=lineData
         selectedInterval=selectedInterval
