bar data now works

--- a/tests/dummy/app/templates/embercharts/timeseries.hbs
+++ b/tests/dummy/app/templates/embercharts/timeseries.hbs
@@ -10,11 +10,13 @@
         selectedInterval=selectedInterval
         selectedSeedColor=selectedSeedColor
         yAxisFromZero=yAxisFromZero
-      }}
-      {{!--         barData=barData
+        barData=barData
         barPadding=barPadding
         barGroupPadding=barGroupPadding
-        barLeftOffset=barLeftOffset --}}
+        barLeftOffset=barLeftOffset        
+      }}
+
+
     </div>
   </div>
 
