--- a/tests/dummy/app/templates/embercharts/overview.hbs
+++ b/tests/dummy/app/templates/embercharts/overview.hbs
@@ -11,31 +11,31 @@
   </div>
 
   <div class="row ember-charts-examples">
-    {{#link-to 'emberCharts.timeseries'}}
+    {{#link-to 'embercharts.timeseries'}}
       <div class="col-md-4">
         <h4>Time Series</h4>
         <img class="preview-box" src="img/preview_chart_time_series.png" />
       </div>
     {{/link-to}}
-    {{#link-to 'emberCharts.horizontalbar'}}
+    {{#link-to 'embercharts.horizontalbar'}}
       <div class="col-md-4">
         <h4>Horizontal Bar</h4>
         <img class="preview-box" src="img/preview_chart_horizontal_bar.png" />
       </div>
     {{/link-to}}
-    {{#link-to 'emberCharts.verticalbar'}}
+    {{#link-to 'embercharts.verticalbar'}}
       <div class="col-md-4">
         <h4>Vertical Bar</h4>
         <img class="preview-box" src="img/preview_chart_vertical_bar.png" />
       </div>
     {{/link-to}}
-    {{#link-to 'emberCharts.pie'}}
+    {{#link-to 'embercharts.pie'}}
       <div class="col-md-4">
         <h4>Pie</h4>
         <img class="preview-box" src="img/preview_chart_pie.png" />
       </div>
     {{/link-to}}
-    {{#link-to 'emberCharts.scatter'}}
+    {{#link-to 'embercharts.scatter'}}
       <div class="col-md-4">
         <h4>Scatter</h4>
         <img class="preview-box" src="img/preview_chart_scatter.png" />
