--- a/tests/dummy/app/templates/embercharts/timeseries.hbs
+++ b/tests/dummy/app/templates/embercharts/timeseries.hbs
@@ -15,8 +15,6 @@
         barGroupPadding=barGroupPadding
         barLeftOffset=barLeftOffset        
       }}
-
-
     </div>
   </div>
 
@@ -68,22 +66,39 @@
         <div class="form-group">
           <label class="col-lg-4 control-label">Bar Padding</label>
           <div class="col-lg-8">
-            {{!view App.ScrubberComponent min="0" max="1" step="0.05" valueBinding="barPadding"}}
+            {{ui-slider
+              value=barPadding
+              min=0
+              max=1
+              step=0.05
+              action="barPadding"
+            }}
             <span class="help-block">Bar Padding: {{barPadding}}</span>
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Bar Group Padding</label>
           <div class="col-lg-8">
-            {{!view App.ScrubberComponent min="0" max="1" step="0.05" valueBinding="barGroupPadding"}}
+            {{ui-slider
+              value=barGroupPadding
+              min=0
+              max=1
+              step=0.05
+              action="barGroupPadding"
+            }}          
             <span class="help-block">Bar Group Padding: {{barGroupPadding}}</span>
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Bar Left Offset</label>
           <div class="col-lg-8">
-            {{!view App.ScrubberComponent min="-1" max="1" step="0.05"
-            valueBinding="barLeftOffset"}}
+            {{ui-slider
+              value=barLeftOffset
+              min=0
+              max=1
+              step=0.05
+              action="barLeftOffset"
+            }}           
             <span class="help-block">Bar Left Offset: {{barLeftOffset}}</span>
           </div>
         </div>
