--- a/tests/dummy/app/templates/embercharts/verticalbar.hbs
+++ b/tests/dummy/app/templates/embercharts/verticalbar.hbs
@@ -34,41 +34,59 @@
         <div class="form-group">
           <label class="col-lg-4 control-label">Data</label>
           <div class="col-lg-8">
-            {{view Ember.Select
-              contentBinding="availableDataSets"
-              valueBinding="selectedData"
-              class="form-control"
-            }}
+            <select class="form-control" onchange={{action (mut selectedData) value="target.value"}}>
+              {{#each availableDataSets key="@index" as |item|}}
+                <option selected={{is-equal item selectedData}} value={{item}}>{{item}}</option>
+              {{/each}}
+            </select>          
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Color</label>
           <div class="col-lg-8">
-            {{view Ember.Select
-              contentBinding="seedColorNames"
-              valueBinding="selectedSeedColorName"
-              class="form-control"
-            }}
+            <select class="form-control" onchange={{action (mut selectedSeedColorName) value="target.value"}}>
+              {{#each seedColorNames key="@index" as |item|}}
+                <option selected={{is-equal item selectedSeedColorName}} value={{item}}>{{item}}</option>
+              {{/each}}
+            </select>            
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Rotated Label Height</label>
           <div class="col-lg-8">
-            {{view App.ScrubberComponent min="20" max="100" valueBinding="maxLabelHeight"}}
+            {{ui-slider
+              value=maxLabelHeight
+              min=20
+              max=100
+              step=5
+              action="maxLabelHeight"
+            }}          
             <span class="help-block">Max Label Height: {{maxLabelHeight}}</span>
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Between Group Padding</label>
           <div class="col-lg-8">
-            {{view App.ScrubberComponent min="0" max="2" step="0.05" valueBinding="betweenGroupPadding"}}
+            {{ui-slider
+              value=betweenGroupPadding
+              min=0
+              max=2
+              step=0.05
+              action="betweenGroupPadding"
+            }}            
             <span class="help-block">Between Group Padding: {{betweenGroupPadding}}</span>
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Within Group Padding</label>
           <div class="col-lg-8">
-            {{view App.ScrubberComponent min="0" max="2" step="0.05" valueBinding="withinGroupPadding"}}
+            {{ui-slider
+              value=withinGroupPadding
+              min=0
+              max=2
+              step=0.05
+              action="withinGroupPadding"
+            }}           
             <span class="help-block">Within Group Padding: {{withinGroupPadding}}</span>
           </div>
         </div>
