--- a/tests/dummy/app/templates/embercharts/pie.hbs
+++ b/tests/dummy/app/templates/embercharts/pie.hbs
@@ -36,7 +36,7 @@
           <label class="col-lg-4 control-label">Color</label>
           <div class="col-lg-8">
             <select class="form-control" onchange={{action (mut selectedSeedColorName) value="target.value"}}>
-              {{#each availableDataSets key="@index" as |item|}}
+              {{#each seedColorNames key="@index" as |item|}}
                 <option selected={{is-equal item selectedSeedColorName}} value={{item}}>{{item}}</option>
               {{/each}}
             </select>            
@@ -87,7 +87,7 @@
     <div class="col-md-6">
       <h4>JSON Data</h4>
       <div class="chart-json">
-<pre>{{!prettyPrintedData}}</pre>
+<pre>{{prettyPrintedData}}</pre>
       </div>
     </div>
   </div>
