--- a/tests/dummy/app/templates/embercharts/scatter.hbs
+++ b/tests/dummy/app/templates/embercharts/scatter.hbs
@@ -5,7 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{scatter-chart
+      {{chart-scatter
         dotRadius=dotRadius
         data=data
         isShowingTotal=isShowingTotal
@@ -25,27 +25,33 @@
         <div class="form-group">
           <label class="col-lg-4 control-label">Data</label>
           <div class="col-lg-8">
-            {{view Ember.Select
-             contentBinding="availableDataSets"
-             valueBinding="selectedData"
-             class="form-control"
-            }}
+            <select class="form-control" onchange={{action (mut selectedData) value="target.value"}}>
+              {{#each availableDataSets key="@index" as |item|}}
+                <option selected={{is-equal item selectedData}} value={{item}}>{{item}}</option>
+              {{/each}}
+            </select>           
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Color</label>
           <div class="col-lg-8">
-            {{view Ember.Select
-              contentBinding="seedColorNames"
-              valueBinding="selectedSeedColorName"
-              class="form-control"
-            }}
+            <select class="form-control" onchange={{action (mut selectedSeedColorName) value="target.value"}}>
+              {{#each seedColorNames key="@index" as |item|}}
+                <option selected={{is-equal item selectedSeedColorName}} value={{item}}>{{item}}</option>
+              {{/each}}
+            </select>  
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-4 control-label">Dot Radius</label>
           <div class="col-lg-8">
-            {{view App.ScrubberComponent min="2" max="20" step="1" valueBinding="dotRadius"}}
+            {{ui-slider
+              value=dotRadius
+              min=2
+              max=20
+              step=1
+              action="dotRadius"
+            }}            
             <span class="help-block">Dot Radius: {{dotRadius}}</span>
           </div>
         </div>
