listed as deprecation free

--- a/tests/dummy/app/templates/embercharts/scatter.hbs
+++ b/tests/dummy/app/templates/embercharts/scatter.hbs
@@ -71,7 +71,8 @@
           <div class="col-lg-offset-4 col-lg-8">
             <div class="checkbox">
               <label>
-                {{view Ember.Checkbox checkedBinding="isShowingTotal"}} Show Portfolio Total
+                {{input type="checkbox" name="isShowingTotal" checked=isShowingTotal}}              
+                 Show Portfolio Total
               </label>
             </div>
           </div>
