--- a/tests/dummy/app/templates/embercharts/verticalbar.hbs
+++ b/tests/dummy/app/templates/embercharts/verticalbar.hbs
@@ -85,7 +85,8 @@
           <div class="col-lg-offset-4 col-lg-8">
             <div class="checkbox">
               <label>
-                {{view Ember.Checkbox checkedBinding="stackBars"}} Stacked Bars
+                {{input type="checkbox" name="stackBars" checked=stackBars}}
+                Stacked Bars
               </label>
             </div>
           </div>
