--- a/tests/dummy/app/templates/embercharts/timeseries.hbs
+++ b/tests/dummy/app/templates/embercharts/timeseries.hbs
@@ -105,7 +105,7 @@
         <div class="form-group">
           <div class="col-lg-offset-4 col-lg-8">
             <div class="checkbox">
-              <label>{{view Ember.Checkbox checkedBinding="yAxisFromZero"}} Force Y-Axis From Zero</label>
+              <label>{{input type="checkbox" name="yAxisFromZero" checked=yAxisFromZero}} Force Y-Axis From Zero</label>
             </div>
           </div>
         </div>
