renamed compoenents for backwards compatiblity

--- a/tests/dummy/app/templates/embercharts/horizontalbar.hbs
+++ b/tests/dummy/app/templates/embercharts/horizontalbar.hbs
@@ -5,14 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{!horizontal-bar-chart
-        minBarThickness=minBarThickness
-        maxBarThickness=maxBarThickness
-        selectedSeedColor=selectedSeedColor
-        data=data
-        selectedSortType=selectedSortType
-      }}
-      {{chart-horizontalbar
+      {{horizontal-bar-chart
         minBarThickness=minBarThickness
         maxBarThickness=maxBarThickness
         selectedSeedColor=selectedSeedColor
