--- a/tests/dummy/app/templates/embercharts/pie.hbs
+++ b/tests/dummy/app/templates/embercharts/pie.hbs
@@ -5,7 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{chart-pie
+      {{pie-chart
         maxRadius=maxRadius
         maxSlicePercent=maxSlicePercent
         minSlicePercent=minSlicePercent
