--- a/tests/dummy/app/templates/embercharts/scatter.hbs
+++ b/tests/dummy/app/templates/embercharts/scatter.hbs
@@ -5,7 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{chart-scatter
+      {{scatter-chart
         dotRadius=dotRadius
         data=data
         isShowingTotal=isShowingTotal
