--- a/tests/dummy/app/templates/embercharts/timeseries.hbs
+++ b/tests/dummy/app/templates/embercharts/timeseries.hbs
@@ -5,7 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{chart-timeseries
+      {{time-series-chart
         lineData=lineData
         selectedInterval=selectedInterval
         selectedSeedColor=selectedSeedColor
