--- a/tests/dummy/app/templates/embercharts/verticalbar.hbs
+++ b/tests/dummy/app/templates/embercharts/verticalbar.hbs
@@ -5,7 +5,7 @@
 
   <div class="example-container">
     <div class="chart-container">
-      {{chart-verticalbar
+      {{vertical-bar-chart
         maxBarThickness=maxBarThickness
         selectedSeedColor=selectedSeedColor
         data=data
